# lemire_nearly_divisionless_random

./: Cargo.toml  extra_code.markdown  notes.markdown  readme.markdown
benches/: my_benchmark.rs  nearly_divisionless_random_benches.rs  shortcut_benches.rs
src/: lib.rs  main.rs  readable.rs
tests/: tests.rs
