[package]
name = "lemire"
version = "0.1.1"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "nearly_divisionless_random_benches"
harness = false

[[bench]]
name = "shortcut_benches"
harness = false
